--- a/src/pages/place order/PlaceOrder.css
+++ b/src/pages/place order/PlaceOrder.css
@@ -39,3 +39,13 @@
 .place-order-right .cart-total button {
   margin-top: 30px;
 }
+
+@media (max-width:750px) {
+
+  .place-order {
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+  }
+
+}
