--- a/src/pages/place order/PlaceOrder.css
+++ b/src/pages/place order/PlaceOrder.css
@@ -43,9 +43,16 @@
 @media (max-width:750px) {
 
   .place-order {
+    margin-top: 30px;
     display: flex;
     flex-direction: column;
     gap: 50px;
+  }
+
+  .place-order-left .title {
+    font-size: 24px;
+    font-weight: 600;
+    margin-bottom: 20px;
   }
 
 }
